--- a/Task/01Task.html
+++ b/Task/01Task.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Task 1 of the day</h1>
+    <h1>Website</h1>
+    <p>It countains several webpages and data files that internet users can access through a browser.</p>
+    <h1>WWW</h1>
+    <p>It refers to all the public websites or pages that users can access on their local computers and other devices through the internet.</p>
+    <h1>HTTP</h1>
+    <p>Hyper Text Transfer Protocol, it is a application-level protocol used for exchanging files on the WWW.</p>
+    <h1>Client Server</h1>
+    <p>The client request a service or resourse from one program to another program to the server.</p>
+    <h1>Domain</h1>
+    <p>It is a group of connected windows in computers that share user account information and a security policy.</p>
+    <h1>Host</h1>
+    <p>Any hardware device that has the capacity of permitting access to a network through a user interface, network address, or any other means.</p>
+    <h1>Hosting</h1>
+    <p>When a hosting provider allocates space or a web server for a website to store its files.</p>
+    <h1>FTP</h1>
+    <p>It is a standard network protocol used for the transfer of files from one host to another over a transmission control protocol based network such as internet.</p>
+    <h1>Path</h1>
+    <p>A string of character used to uniquely identify a location in a directory structure.</p>
+    <h1>Extension</h1>
+    <p>Are code packages that run inside visual studio and provide new or improved features.</p>
+    <h1>Editor/VScode</h1>
+    <p>It is a source code editor made by microsoft with the electron framework, for windows, linux and macOS.</p>
+    <h1>URL-URI/URN</h1>
+    <p>URL is unique identifier used to locate a resource on the internet.</p>
+    <h1>Address bar</h1>
+    <p>It is the text field at the top of a web browser's that displays the name or URL of the current web page.</p>
+    <h1>Title bar</h1>
+    <p>It is located at the topmost part of a window within grafical user interface. It shows the software title that is currently running.</p>
+    
 </body>
 </html>
