--- a/Practice/01table.html
+++ b/Practice/01table.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table In HTML</title>
 </head>
+
 <body>
-    <h1>Table In HTML</h1>
-    
+    <table align="center" border="5" cellspacing="0" width="50%">
+        <caption> <h1>Time Table</h1></caption> 
+        <thead>
+            <th>Day/Period</th>
+            <th>I <br>
+                09:30-10:20
+            </th>
+            <th>II <br>
+                10:20-11:10
+            </th>
+            <th>III <br>
+                11:10-12:00
+            </th>
+            <th>
+                12:00-12:40
+            </th>
+            <th>IV <br>
+                12:40-01:30
+            </th>
+            <th>V <br>
+                01:30-02:20
+            </th>
+            <th>VI <br>
+                02:20-03:10
+            </th>
+            <th>VII <br>
+                03:10-04:00
+            </th>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Monday</b></td>
+                <td>Eng</td>
+                <td>Maths</td>
+                <td>Che</td>
+                <td rowspan="6"><center>L <br>
+                    U <br>
+                    N <br>
+                    C <br>
+                    H <br></center>
+                </td>
+                <td colspan="3"> <center>LAB</center></td>
+                <td>Phy</td>
+            </tr>
+            <tr>
+                <td><b>Tuesday</b></td>
+                <td colspan="3"><center>LAB</center></td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Maths</td>
+                <td>Sports</td>
+            </tr>
+            <tr>
+                <td><b>Wednesday</b></td>
+                <td>Maths</td>
+                <td>Phy</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td colspan="3"><center>LIBRARY</center></td>
+            </tr>
+            <tr>
+                <td><b>Thursday</b></td>
+                <td>Phy</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td colspan="3"><center>LAB</center></td>
+                <td>Maths</td>
+            </tr>
+            <tr>
+                <td><b>Friday</b></td>
+                <td colspan="3"><center>LAB</center></td>
+                <td>Maths</td>
+                <td>Che</td>
+                <td>Eng</td>
+                <td>Phy</td>
+            </tr>
+            <tr>
+                <td><b>Saturday</b></td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Maths</td>
+                <td colspan="3"><center>SEMINAR</center></td>
+                <td>Sports</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
