--- a/Task/03Task.html
+++ b/Task/03Task.html
@@ -11,37 +11,43 @@
     <li>Delhi
         <ul type="circle">
         <li>New delhi</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/New Delhi.jfif" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/New Delhi.jfif" alt="" width="300px"></a>
+        
         </ul>          
     </li>
     <li>Haryana
         <ul type="circle">
         <li>Chandigarh</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/Chandigarh.jfif" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/Chandigarh.jfif" alt="" width="300px"></a>
+
         </ul>          
     </li>
     <li>Gujarat
         <ul type="circle">
         <li>Gandhinagar</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/Gandhinagar.jfif" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/Gandhinagar.jfif" alt="" width="300px"></a>
+
         </ul>          
     </li>
     <li>Rajasthan
         <ul type="circle">
         <li>Jaipur</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/Jaipur.jpg" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/Jaipur.jpg" alt="" width="300px"></a>
+
         </ul>          
     </li>
     <li>Maharastra
         <ul type="circle">
         <li>Mumbai</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/Mumbai.jpg" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/Mumbai.jpg" alt="" width="300px"></a>
+
         </ul>          
     </li>
     <li>Uttarpradesh
         <ul type="circle">
         <li>Lucknow</li>
-        <a href="https://www.wikipedia.org/"><img height="200px" width="200px" src="HTML/Images/Lucknow.jpg" alt=""></a>
+        <a href="https://www.wikipedia.org"><img src="../Images/Lucknow.jpg" alt="" width="300px"></a>
+
         </ul>          
     </li>
     </ol>
